# RacketSport-Stroke-identification

./: .gitignore  04_raw_keypoints_iteration1.json  04_raw_keypoints_iteration2.json  04_raw_keypoints_iteration3.json  LICENSE  README.md  bbox1.csv  bbox5.csv  bbox_video3.csv  clip_captions.json  events_markup.json  image_embeddings_saved.npy  keypoints.csv  keypoints1.csv  keypoints2.csv  keypoints3.csv  keypoints3_saved.csv  keypoints4_saved.csv  keypoints5.csv  keypoints5_saved.csv  keypoints_saved.csv  keypoints_video3.csv  merged_output.csv  merged_output_video3.csv  midpoints.csv  midpoints1.csv  midpoints3.csv  midpoints_video1.csv  midpoints_video2.csv  midpoints_video3.csv  mirrored_midpoints_video1.csv  mirrored_midpoints_video2.csv  normalized_data-kopi.numbers  normalized_data_video3.csv  pyproject.toml  raw_keypoints.json  requirements.txt  text_embeddings_saved.npy  utility_functions.py
data/events/: events_markup1.json  events_markup10.json  events_markup11.json  events_markup12.json  events_markup2.json  events_markup3.json  events_markup4.json  events_markup5.json  events_markup6.json  events_markup7.json  (+2 more)
notebooks/: empty_event_keys.json  empty_event_keys2.json  empty_event_keys3.json  empty_event_keys4.json  empty_event_keys_1_frame.json  extract_frames.ipynb
src/: clustering.py  clustering2.py  clustering3.py  combine_tables.py  dectectron2.py  detectron-full_video.py  distance_to_midtpoints.py  extract_hits.py  full_video.py  inference.py  log_reg.py  midpoints.py  normalize.py  overlay.py  overlay2.py  overlay3.py  run_detections.py
(+417 files in other folders)
