[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RacketSport-Stroke-identification"
version = "0.1.0"
description = "A project for stroke identification using racket data"

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.metadata]
author = "Moamal Fadhil Abdul-Mahdi"
author_email = "moamal001@gmail.com"
url = "https://github.com/moamal01/RacketSport-Stroke-identification.git"